completed: clean code for comments, links for icons, middleware comb., fixed/in prog: alignment of containers,some translation

--- a/root/client/public/css/index.css
+++ b/root/client/public/css/index.css
@@ -204,14 +204,15 @@ nav li:hover{
     position:relative;
     overflow:visible;
     overflow-x: hidden;
+    overflow-y: hidden;
     filter:none;
     
-    height:min(50%,50vh);
     width:100%;
+    height:80vh;
     align-items: center;
     justify-content: center;
-    padding:1.5rem 0rem 5rem 0rem;
-    margin:0 auto;
+    padding:8rem 0rem 5rem 0rem;
+    margin:0rem 0rem 8rem 0rem;
 }
 
 .container{
@@ -219,10 +220,10 @@ nav li:hover{
     overflow-x: hidden;
     justify-content: center;
     vertical-align: top;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 2fr 3fr 2fr;
     grid-template-rows: 1fr;
     gap:1rem;
-    margin:0 auto;
+    margin:0rem 0rem 0rem 0rem;
     padding: 0rem 0rem 0rem 0rem;
     width:100%;
     height:75vh;
@@ -232,26 +233,44 @@ nav li:hover{
     display:grid;
     overflow-x: hidden;
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 1fr;
+    /* grid-template-rows: 2fr 1fr; */
     justify-content: stretch;
     align-items: center;
     overflow: hidden;
     text-wrap: wrap;
-    padding: 1em;
     max-width: 100%;
     max-height:100%;
 }
 
+#block_main_1{
+    display: grid;
+    grid-template-rows:1fr 2fr;
+    gap:1rem;
+    height:100%;
+}
+
+#block_main_2{
+    display: grid;
+    grid-template-rows:3fr 2fr;
+    gap:1rem;
+    height:100%
+}
+#block_main_3{
+    display: grid;
+    grid-template-rows:1fr 4fr;
+    gap:1rem;
+    height:100%;
+}
 .flex_item{
     background-color:var(--clr-primary);
     border: 6px solid var(--clr-accent300);
     border-radius: .5em;
     color:var(--clr-secondary);
-    overflow: hidden;
+    overflow: auto;
     text-wrap: wrap;
-    padding: 1em;
-    max-width: 100%;
-    max-height:100%;
+    padding: .5rem;
+    width: 100%;
+    height:100%;
 }
 
 .flex_item_small{
@@ -259,13 +278,71 @@ nav li:hover{
     flex:100%;
 }
 
+.logo_wrapper{
+    display:grid;
+    grid-template-columns: repeat(5,1fr);
+    height:20%;
+    width:75%;
+    padding:0rem;
+    gap:2rem;
+    margin:0 auto;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    list-style: none;
+    
+}
+.logo_container{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding:0;
+    list-style: none;
+    grid-column: 2/5;
+}
+
+ul.logo_container{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    margin:0;
+    padding:0;
+    list-style: none;
+}
+
+.main_menu_logo_item{
+    /* aspect-ratio: 3 / 2; */
+    display:flex;
+    position:relative;
+    justify-content:space-between;
+    align-items: center;
+    width:35%;
+    height:auto;
+    margin:0;
+    padding:0;
+    /* max-width: 3vw;
+    max-height: 2vh; */
+}
 .formatting_block{
     opacity: .98;
 }
 
+#portrait{
+    display: flex;
+    justify-content: center;
+    align-items:start;
+    /* border-radius:50% 45% 50% 45%; */
+    border-radius:50%;
+    overflow:hidden;
+
+}
 #photo_me{
-    width:65%;
-    height:85%;
+    position:relative;
+    top:-21vh;
+    aspect-ratio:initial;
+    width:auto;
+    height:220%;
 }
 .title{
     text-decoration: none;
@@ -273,6 +350,10 @@ nav li:hover{
 }
 
 .connect_button{
+    display:flex;
+    position: relative;
+    justify-self: center;
+    align-items: center;
     padding:.5rem 1rem .5rem 1rem;
     text-decoration: none;
     color:var(--clr-secondary);
@@ -288,10 +369,19 @@ nav li:hover{
     display:block;
     position:relative;
     overflow:visible;
-    width: 100%;
-    height:min(75%,70vh);
+    
+    height:min(50%,50vh);
+    width: 99%;
+    /* justify-self: center; */
+    
     padding:0rem 0rem 0rem 0rem;
     margin:0 auto;
+}
+
+.card_format{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card{
@@ -299,18 +389,16 @@ nav li:hover{
     position:relative;
     overflow:hidden;
     gap:1rem;
-    padding: 2rem 0rem 1rem 0rem;
-    margin:0rem 4.3rem 2rem 4.3rem;
+    padding: 1rem 0rem 1rem 0rem;
+    /* margin:0rem 4.3rem 2rem 4.3rem; */
+    margin: 0rem 0rem 2rem 0rem;
     
     background:var(--clr-primary);
     color:var(--clr-secondary);
     border: 5px solid var(--clr-accent300);
     border-radius: .5em;
-
-    align-items: center;
-    justify-content: center;
-
-    width:89.75%;
+    
+    width:94%;
     height:35%;
     
 }
@@ -326,6 +414,7 @@ nav li:hover{
 #projects_page{
     counter-reset: project-num;
 }
+
 #eecs149_poster{
     display: flex;
     height:55%;
@@ -439,13 +528,7 @@ nav li:hover{
     align-items: center;
 }
 
-.logo_container{
-    display:grid;
-    width:75%;
-    padding:2rem;
-    grid-template-columns: repeat(3,1fr);
-    gap:2rem;
-}
+
 
 .logo_item{
     display: flex;
